force-app/main/default/objects/Beneficial_Owner__c/Beneficial_Owner__c.object-meta.xml
<CustomObject>
    <label>Beneficial Owner</label>
    <nameField>
        <displayFormat>BO-{00000}</displayFormat>
        <label>Beneficial Owner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beneficial Owners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>