force-app/main/default/objects/Beneficial_Owner__c/fields/Building_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Building_Name_Number__c</fullName>
    <label>Building Name/Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>