force-app/main/default/objects/Beneficial_Owner__c/fields/Flat__c.field-meta.xml
<CustomField>
    <fullName>Flat__c</fullName>
    <label>Flat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>