force-app/main/default/objects/Beneficial_Owner__c/fields/Held__c.field-meta.xml
<CustomField>
    <fullName>Held__c</fullName>
    <label>% Held</label>
    <length>255</length>
    <type>Text</type>
</CustomField>