force-app/main/default/objects/Beneficial_Owner__c/fields/Months_at_this_address__c.field-meta.xml
<CustomField>
    <fullName>Months_at_this_address__c</fullName>
    <label>Months at this address</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>