force-app/main/default/objects/Beneficial_Owner__c/fields/Search_ID__c.field-meta.xml
<CustomField>
    <fullName>Search_ID__c</fullName>
    <externalId>true</externalId>
    <label>Search ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>