force-app/main/default/objects/Beneficial_Owner__c/fields/Search_Reference__c.field-meta.xml
<CustomField>
    <fullName>Search_Reference__c</fullName>
    <label>Search Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>