force-app/main/default/objects/Beneficial_Owner__c/fields/Smart_Search_Link__c.field-meta.xml
<CustomField>
    <fullName>Smart_Search_Link__c</fullName>
    <label>Smart Search Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>