force-app/main/default/objects/Beneficial_Owner__c/fields/Smart_Search_Status__c.field-meta.xml
<CustomField>
    <fullName>Smart_Search_Status__c</fullName>
    <label>Smart Search Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Refer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>