force-app/main/default/objects/Beneficial_Owner__c/fields/Subject_ID__c.field-meta.xml
<CustomField>
    <fullName>Subject_ID__c</fullName>
    <label>Subject ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>