force-app/main/default/objects/Beneficial_Owner__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Miss.</fullName>
            </value>
            <value>
                <fullName>Sir</fullName>
            </value>
            <value>
                <fullName>Revd</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Ven</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Prof.</fullName>
            </value>
            <value>
                <fullName>Dame</fullName>
            </value>
            <value>
                <fullName>Lord</fullName>
            </value>
            <value>
                <fullName>Lady</fullName>
            </value>
            <value>
                <fullName>Mx.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>