force-app/main/default/objects/Beneficial_Owner__c/fields/Town__c.field-meta.xml
<CustomField>
    <fullName>Town__c</fullName>
    <label>Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>