force-app/main/default/objects/Beneficial_Owner__c/fields/Years_at_this_address__c.field-meta.xml
<CustomField>
    <fullName>Years_at_this_address__c</fullName>
    <label>Years at this address</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>